--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,14 @@
-<h1>Lists#index</h1>
-<ul>
-  <% @lists.each do |list| %>
-    <li><%= link_to list.name, "/lists/#{list.id}" %></li>
-  <% end %>
-</ul> 
+<h1>All the lists</h1>
+
+<div>
+  <ul>
+    <% @lists.each do |list| %>
+      <li><%= list.name %> -
+      <%= link_to 'Details', list_path(list) %></li>
+    <% end %>
+  </ul>
+</div>
+
+<div>
+  <%= link_to 'Add list', new_list_path %>
+</div>
