--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Lists#show</h1>
-<p>Find me in app/views/lists/show.html.erb</p>
+<h1>Details of my list</h1>
+
+<%= @list.name %>
+<%= link_to 'Add bookmark', new_list_bookmark_path(@list.id) %>
+
+<ul>
+  <% @list.movies.each do |movie| %>
+    <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+    <li> <%= movie.title %> - <%= movie.overview %> 
+    <%= link_to 'Delete bookmark', bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list" } %>
+</li>
+  <% end %>
+
+</ul>
